@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Thu, Sep 3, 2009
+---------------------------------------------------------------------
+- Make sure [rake crm:setup:admin] can actually assign admin attribute (thanks Rit!)
+- Correctly assign and revoke admin rights in Admin/Users (thanks Rit!)
+
 Tue, Sep 1, 2009
 ---------------------------------------------------------------------
 - Fixed user signup vulnerability (thanks, Rit!)
